update home page layout

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="bg-secondary clearfix">
               <div class="inner-text">
                 <h3 class="color-dark no-margin-top">Hello There!</h3>
-                <p >I have 7 years work experience in <b>software engineering</b> (Android, React, NodeJs, etc) and 4+ years work experience in <b>User experience design</b> for multiple different companies from the different industry. </p>
+                <p >I have 5+ years work experience in <b>User experience design</b> and 7+ years work experience in <b>software engineering</b> (Android, React, NodeJs, etc) for multiple different companies from the different industry. </p>
 
                 <p class="no-margin">I'm an advocate of <b>lean UX</b>, which means I love agile and user center design. My design philosophy is rational, consistency and agile. <b>Rational</b> means all the design I come up with always based on certain reason, either from <b>user testing</b> or widely accepted <b>design principle</b> and patterns. <b>Consistency</b> means I will use <b>style guideline</b> and well-defined design principle across the whole design life cycle, which will reduce engineering effort and handoff time. <b>Agile</b> means I will perform design ideation, feasibility check, <b>wireframe, prototyping</b>, quick validation within each development cycle.</p> <br>
 
@@ -280,6 +280,17 @@
 
       <!-- RESUME -->
       <section id="resume" class="block-section">
+        <!-- DOWNLOAD & PRVIEW BTN -->
+        <div class="parallax-bg bg1" >
+          <div class="container">
+            <div class="padding30 text-center">
+              <a href="https://drive.google.com/file/d/1bugurB3EVGK_7VrDTxngJ0HRsCw-vtwW/view?usp=sharing" class="btn btn-flat-line btn-default light-font "><i class="fa fa-download"></i>  Download Resume</a>
+              <!-- <span class="space-inline-15 hidden-xs"></span>
+              <a href="#" class="btn btn-flat-line btn-default light-font"><i class="fa fa-print"></i> Print CV</a> -->
+            </div>
+          </div>
+        </div><!-- END DOWNLOAD & PRVIEW BTN -->
+        
         <!--EMPLOYEMNT-->
         <div class=" shape-bottom">
           <div class="bg-secondary block-title">
@@ -510,16 +521,6 @@
           <div class="white-space-50"></div>
         </div>
 
-        <!-- DOWNLOAD & PRVIEW BTN -->
-        <div class="parallax-bg bg1" >
-          <div class="container">
-            <div class="padding30 text-center">
-              <a href="https://drive.google.com/file/d/1bugurB3EVGK_7VrDTxngJ0HRsCw-vtwW/view?usp=sharing" class="btn btn-flat-line btn-default light-font "><i class="fa fa-download"></i>  Download Resume</a>
-              <!-- <span class="space-inline-15 hidden-xs"></span>
-              <a href="#" class="btn btn-flat-line btn-default light-font"><i class="fa fa-print"></i> Print CV</a> -->
-            </div>
-          </div>
-        </div><!-- END DOWNLOAD & PRVIEW BTN -->
       </section><!-- END SERVICES-->
 
       <!--CONTACT-->
