--- a/portfolio-dubdub.html
+++ b/portfolio-dubdub.html
@@ -44,7 +44,7 @@
 
       <!-- Main Header -->
       <header class="main-header" id="top">
-        <div class="content-table header-content-fixed">
+        <!-- <div class="content-table header-content-fixed">
           <div class="v-content">
             <div class="container">
               <h1 class="text-uppercase color-dark name">DubDub</h1>
@@ -52,7 +52,7 @@
               <a href="#portfolio" class="move-to-next link-inpage"><i class="fa fa-4x fa-angle-double-down" ></i></a>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!-- Main navbar -->
         <div class="menu-area">
