remove the header content from portfolio page

--- a/portfolio-dabble.html
+++ b/portfolio-dabble.html
@@ -43,19 +43,9 @@
     <div class="wrapper">
 
       <!-- Main Header -->
-      <header class="main-header" id="top">
-        <div class="content-table header-content-fixed">
-          <div class="v-content">
-            <div class="container">
-              <h1 class="text-uppercase color-dark name">Dabble</h1>
-              <h4  class="text-uppercase color-dark font-alt job">Branding - UX Design - Full-Stack Engineering</h4>
-              <a href="#portfolio" class="move-to-next link-inpage"><i class="fa fa-4x fa-angle-double-down" ></i></a>
-            </div>
-          </div>
-        </div>
-
+      <header class="main-header no-window no-header-content" id="top">
         <!-- Main navbar -->
-        <div class="menu-area">
+        <div class="menu-area nav-white-bg nav-fixed ">
           <div class="toogle-bars">
             <a href="#menu-collapse" data-toggle="collapse" class="collapsed"><i class="fa fa-bars ic-open"></i> <i class="fa fa-remove ic-close"></i> MENU</a>
           </div>
