--- a/portfolio-bbtracker.html
+++ b/portfolio-bbtracker.html
@@ -45,17 +45,7 @@
     <div class="wrapper">
 
       <!-- Main Header -->
-      <header class="main-header" id="top">
-        <div class="content-table header-content-fixed">
-          <div class="v-content">
-            <div class="container">
-              <h1 class="text-uppercase color-dark name">BBTracker</h1>
-              <h4  class="text-uppercase color-dark font-alt job">UX Design - Full-Stack Engineering</h4>
-              <a href="#portfolio" class="move-to-next link-inpage"><i class="fa fa-4x fa-angle-double-down" ></i></a>
-            </div>
-          </div>
-        </div>
-
+      <header class="main-header no-window no-header-content" id="top">
         <!-- Main navbar -->
         <div class="menu-area">
           <div class="toogle-bars">
