--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <p><span>Feel free to reach out to me, I'm happy to chat with you!</span></p>
 
                 <!-- <button type="button" class="btn primary-btn btn-flat-solid">View Case Study</button> -->
-                <a href="https://drive.google.com/file/d/19KX2wQQxfZUJ_wewJXivqndArgc-RspS/view?usp=sharing" class="btn btn-block btn-flat-solid btn-lg btn-pill btn-sm margin-top-25 primary-btn" target="_blank"><i class="fa fa-briefcase"></i> View a design case study </a>
+                <a href="portfolio-companion.html" class="btn btn-block btn-flat-solid btn-lg btn-pill btn-sm margin-top-25 primary-btn"><i class="fa fa-briefcase"></i> View a design case study </a>
                 
               </div>
             </div>
