--- a/portfolio-companion.html
+++ b/portfolio-companion.html
@@ -138,7 +138,6 @@
                   <a href="https://pointclickcare.com/senior-care-industry-specific-software-solutions/assisted-living-facilities/pointclickcare-companion/" class="btn btn-flat-solid primary-btn margin-right-5">Visit Site</a>
                   <a href="https://pointclickcare.wistia.com/medias/cemqk2tp3n?wtime=0" class="btn btn-flat-solid primary-btn">Watch Video</a>
                 </p>
-                <div class="white-space-20"></div>
               </div>
               <div class="col-sm-6">
                 <div class="white-space-20"></div>
@@ -149,6 +148,17 @@
                   <p><a href="https://www.linkedin.com/pulse/behind-scenes-goal-setting-our-new-mobile-app-care-staff-cory-mogk/" class="btn btn-flat-solid primary-btn margin-right-5">Full article</a></p>
                 </div>
               </div>
+              <div class="col-sm-12">
+                <div class="white-space-20"></div>
+                <h3 class="text-uppercase color-dark text-bold">My responsibility</h3>
+                <div class="white-space-10"></div>
+                <p>I’m the design lead of this strategic product. My responsibility involved user research, interaction design, design system, usability testing, and provide strategic design advice to the product management team.</p>
+                <h3 class="text-uppercase color-dark text-bold">The design process</h3>
+                <div class="white-space-10"></div>
+                <p>The design process of this product is a fully adapted Design thinking process. I conducted user interviews and shadowed the user at the Empathise stage. I created personas and journey map to identify the pain points at the Define stage. I host ideation sessions to brainstorm ideas with the whole team at the Ideate stage. I created design vision and LoFi mockups based on the converged ideas at the Prototype stage. And I conducted usability testings with the real user with mockups to validate the designs at the Testing stage.</p>
+                <a href="https://drive.google.com/file/d/19KX2wQQxfZUJ_wewJXivqndArgc-RspS/view" class="btn btn-flat-solid primary-btn margin-right-5" target="_blank">View the design process</a>
+              </div>
+              
 
             </div>
           </div>
