--- a/index.html
+++ b/index.html
@@ -4,6 +4,34 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    
+    <!-- Primary Meta Tags -->
+    <title>Victor Chen Li's Online Portfolio</title>
+    <meta name="title" content="Victor Chen Li's Online Portfolio">
+    <meta name="description" content="- Product Designer have 6 years of working experience in both web and mobile
+    - 8 years of experience in frontend and backend full stack engineering and released multiple products.
+    - Scrum Master in the team to advocate agile process for the end to end product lifecycle
+    - Passionate about learning new technology and building side projects for fun">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://victorchenli.github.io/">
+    <meta property="og:title" content="Victor Chen Li's Online Portfolio">
+    <meta property="og:description" content="- Product Designer have 6 years of working experience in both web and mobile
+    - 8 years of experience in frontend and backend full stack engineering and released multiple products.
+    - Scrum Master in the team to advocate agile process for the end to end product lifecycle
+    - Passionate about learning new technology and building side projects for fun">
+    <meta property="og:image" content="assets/theme/images/my-pict1.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://victorchenli.github.io/">
+    <meta property="twitter:title" content="Victor Chen Li's Online Portfolio">
+    <meta property="twitter:description" content="- Product Designer have 6 years of working experience in both web and mobile
+    - 8 years of experience in frontend and backend full stack engineering and released multiple products.
+    - Scrum Master in the team to advocate agile process for the end to end product lifecycle
+    - Passionate about learning new technology and building side projects for fun">
+    <meta property="twitter:image" content="assets/theme/images/my-pict1.jpg">
 
 
     <title>Victor Chen Li's Online Portfolio</title>
