--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     - 8 years of experience in frontend and backend full stack engineering and released multiple products.
     - Scrum Master in the team to advocate agile process for the end to end product lifecycle
     - Passionate about learning new technology and building side projects for fun">
-    <meta property="og:image" content="assets/theme/images/my-pict1.jpg">
+    <meta property="og:image" content="https://victorchenli.github.io/assets/theme/images/my-pict1.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -31,7 +31,7 @@
     - 8 years of experience in frontend and backend full stack engineering and released multiple products.
     - Scrum Master in the team to advocate agile process for the end to end product lifecycle
     - Passionate about learning new technology and building side projects for fun">
-    <meta property="twitter:image" content="assets/theme/images/my-pict1.jpg">
+    <meta property="twitter:image" content="https://victorchenli.github.io/assets/theme/images/my-pict1.jpg">
 
 
     <title>Victor Chen Li's Online Portfolio</title>
