update case study

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 <p><span>Feel free to reach out to me, I'm happy to chat with you!</span></p>
 
                 <!-- <button type="button" class="btn primary-btn btn-flat-solid">View Case Study</button> -->
-                <a href="portfolio-companion.html" class="btn btn-block btn-flat-solid btn-lg btn-pill btn-sm margin-top-25 primary-btn"><i class="fa fa-briefcase"></i> View a design case study </a>
+                <a href="https://drive.google.com/file/d/1ajoTFhWqE8AbmEjisL3Iurp1pdLZ_-n3/view?usp=sharing" class="btn btn-block btn-flat-solid btn-lg btn-pill btn-sm margin-top-25 primary-btn"><i class="fa fa-briefcase"></i> View a design case study </a>
                 
               </div>
             </div>
@@ -200,6 +200,20 @@
           <div class="container-medium clearfix">
             <div class="row list-work">
               
+              <!-- <div class="col-md-4 col-sm-6">
+                <div class="box-work">
+                  <div class="work-preview">
+                    <img src="assets/theme/images/portfolio/companion_promo.png" alt="">
+                    <div class="hover">
+                      <div class="link-btns">
+                        <a href="assets/theme/images/portfolio/companion_promo.png" title="pic 03" class="galery-item"><i class="fa fa-search-plus"></i></a>
+                        <a href="portfolio-companion.html"><i class="fa fa-link"></i></a>
+                      </div>
+                      <a href="portfolio-companion.html" class="project-title">FreshBooks App Store</a>
+                    </div>
+                  </div>
+                </div>
+              </div> -->
               <div class="col-md-4 col-sm-6">
                 <div class="box-work">
                   <div class="work-preview">
@@ -310,8 +324,8 @@
                 <div class="desc">
                   <h5 class="color-dark text-bold">Empathise</h5>
                   <p class="font-alt color-dark"><b>Activities:</b> User Interview, Focus Group</p>
-                  <p>In this stage, I will conduct user interview, shadowing or focus group sessions with target users. During those sessions, I will collect user's feedback and observe user's behaviour to identify patterns and insights.</p>
                   <p class="font-alt color-dark"><b>Deliverable:</b> Insights, Affinity Diagramming</p>
+                  <p>In this stage, I will conduct user interview, shadowing or focus group sessions with target users. During those sessions, I will collect user's feedback and observe user's behaviour to identify patterns and insights.</p>
                 </div>
               </li>
               <li>
@@ -328,7 +342,7 @@
                 <div class="ic"><i class="fa fa-briefcase"></i></div>
                 <div class="number font-alt">03</div>
                 <div class="desc">
-                  <h5 class=" color-dark text-bold">Software Engineer, Project Lead</h5>
+                  <h5 class=" color-dark text-bold">Prototyping</h5>
                   <p class="font-alt color-dark">Huawei Technology Co., Ltd, China</p>
                   <p>Responsible for developing a cloud computing platform and leading a small team with 5 software engineers and 3 QA. Communicating with the customer to align the requirements, drafting and revising design and implementation documents, developing API service platform with Java.</p>
                   <p class="font-alt color-dark">Aug, 2011 - Jul, 2013</p>
