--- a/index.html
+++ b/index.html
@@ -240,46 +240,40 @@
                 </div>
               </div> -->
               <div class="col-md-4 col-sm-6">
-                <div class="box-work">
-                  <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/companion_promo.png" alt="">
-                    <div class="hover">
-                      <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/companion_promo.png" title="pic 03" class="galery-item"><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-companion.html"><i class="fa fa-link"></i></a>
+                <a href="portfolio-companion.html">
+                  <div class="box-work">
+                    <div class="work-preview">
+                      <img src="assets/theme/images/portfolio/companion_promo.png" alt="">
+                      <div class="hover">
+                        <a href="portfolio-companion.html" class="project-title">Companion</a>
                       </div>
-                      <a href="portfolio-companion.html" class="project-title">Companion</a>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
               <div class="col-md-4 col-sm-6">
-                <div class="box-work">
-                  <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/dabbleit_promo.png" alt="">
-                    <div class="hover">
-                      <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/dabbleit_promo.png" title="Dabble" class="galery-item" ><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-dabble.html"><i class="fa fa-link"></i></a>
+                <a href="portfolio-dabble.html">
+                  <div class="box-work">
+                    <div class="work-preview">
+                      <img src="assets/theme/images/portfolio/dabbleit_promo.png" alt="">
+                      <div class="hover">
+                        <a href="portfolio-dabble.html" class="project-title">Dabble</a>
                       </div>
-                      <a href="portfolio-dabble.html" class="project-title">Dabble</a>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
               <div class="col-md-4 col-sm-6">
-                <div class="box-work">
-                  <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/baton_promo.png" alt="">
-                    <div class="hover">
-                      <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/baton_promo.png" title="Baton" class="galery-item"><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-baton.html"><i class="fa fa-link"></i></a>
+                <a href="portfolio-baton.html">
+                  <div class="box-work">
+                    <div class="work-preview">
+                      <img src="assets/theme/images/portfolio/baton_promo.png" alt="">
+                      <div class="hover">
+                        <a href="portfolio-baton.html" class="project-title">Baton</a>
                       </div>
-                      <a href="portfolio-baton.html" class="project-title">Baton</a>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
               <!-- <div class="col-md-4 col-sm-6">
                 <div class="box-work">
@@ -296,32 +290,28 @@
                 </div>
               </div> -->
               <div class="col-md-4 col-sm-6">
-                <div class="box-work">
-                  <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/dubdub_promo.png" alt="">
-                    <div class="hover">
-                      <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/dubdub_promo.png" title="pic 05" class="galery-item"><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-dubdub.html"><i class="fa fa-link"></i></a>
+                <a href="portfolio-dubdub.html">
+                  <div class="box-work">
+                    <div class="work-preview">
+                      <img src="assets/theme/images/portfolio/dubdub_promo.png" alt="">
+                      <div class="hover">
+                        <a href="portfolio-dubdub.html" class="project-title">DubDub</a>
                       </div>
-                      <a href="portfolio-dubdub.html" class="project-title">DubDub</a>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
               <div class="col-md-4 col-sm-6">
-                <div class="box-work">
-                  <div class="work-preview">
-                    <img src="assets/theme/images/portfolio/bbtracker_promo.png" alt="">
-                    <div class="hover">
-                      <div class="link-btns">
-                        <a href="assets/theme/images/portfolio/bbtracker_promo.png" title="pic 06" class="galery-item"><i class="fa fa-search-plus"></i></a>
-                        <a href="portfolio-bbtracker.html"><i class="fa fa-link"></i></a>
+                <a href="portfolio-dubdub.html">
+                  <div class="box-work">
+                    <div class="work-preview">
+                      <img src="assets/theme/images/portfolio/bbtracker_promo.png" alt="">
+                      <div class="hover">
+                        <a href="portfolio-bbtracker.html" class="project-title">BBTracker</a>
                       </div>
-                      <a href="portfolio-bbtracker.html" class="project-title">BBTracker</a>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
             </div>
             <!--BTN SHOW MORE-->
