add doodle calendar

--- a/index.html
+++ b/index.html
@@ -184,19 +184,21 @@
                 <p><span>Feel free to reach out to me, I'm happy to chat with you!</span></p>
 
                 <!-- <button type="button" class="btn primary-btn btn-flat-solid">View Case Study</button> -->
-                <a href="https://drive.google.com/file/d/1ajoTFhWqE8AbmEjisL3Iurp1pdLZ_-n3/view?usp=sharing" class="btn btn-block btn-flat-solid btn-lg btn-pill btn-sm margin-top-25 primary-btn"><i class="fa fa-briefcase"></i> View a design case study </a>
+                <a href="https://drive.google.com/file/d/1ajoTFhWqE8AbmEjisL3Iurp1pdLZ_-n3/view?usp=sharing" class="btn btn-block btn-primary btn-flat-solid btn-lg btn-pill btn-sm margin-top-25"><i class="fa fa-briefcase"></i> View a design case study </a>
                 
               </div>
             </div>
             <div class="bg-dark clearfix">
-              <div class="inner-text">
+              <div class="inner-text contact-me">
+                <h5 class=" color-light text-bold ">Contact Me</h5>
                 <p class="no-margin color-light ">
                   <!-- <strong class="fix-width-100"><i class="fa fa-calendar margin-right-5"></i> Birthdate</strong> : 09/11/1990<br/>
-                  <strong class="fix-width-100"><i class="fa fa-skype margin-right-5"></i> Skype</strong> : usename.fake<br/>
+                  <strong class="fix-width-100"><i class="fa fa-skype margin-right-5"></i> Skype</strong> : usename.fake<br/><i class="fas fa-calendar-plus"></i>
                   <strong class="fix-width-100"><i class="fa fa-phone margin-right-5"></i> Phone</strong> : + 123-456-789-426<br/> -->
                   <strong class="fix-width-100"><i class="fa fa-envelope margin-right-5"></i> Email</strong>shenli570@gmail.com<br/>
+                  <strong class="fix-width-100"><i class="fa fa-calendar margin-right-5"></i> Meet me</strong><a href="https://doodle.com/settings/calendars">Doodle calendar</a><br/>
                   <strong class="fix-width-100"><i class="fa fa-linkedin margin-right-5"></i> Linkedin</strong><a href="https://www.linkedin.com/in/victorchenli/">VictorChenLi</a><br/>
-                  <strong class="fix-width-100"><i class="fa fa-weixin margin-right-5"></i> WeChat</strong>shenli570<br/>
+                  <!-- <strong class="fix-width-100"><i class="fa fa-weixin margin-right-5"></i> WeChat</strong>shenli570<br/> -->
                   <!-- <strong class="fix-width-100"><i class="fa fa-globe margin-right-5"></i> Website</strong> : www.someonedomain.me<br/>
                   <strong class="fix-width-100"><i class="fa fa-location-arrow margin-right-5"></i> Adresse</strong> : 1234 Jalan Road, Fake City, IS 421 123.<br/> -->
                 </p>
