update resume block

--- a/index.html
+++ b/index.html
@@ -388,7 +388,8 @@
         <div class="parallax-bg bg1" >
           <div class="container">
             <div class="padding30 text-center">
-              <a href="https://drive.google.com/file/d/1Bz-e8cFFridXrDcji8XhymebFwd_yoCH/view?usp=sharing" class="btn btn-flat-line btn-default light-font "><i class="fa fa-download"></i>  Download Resume</a>
+              <!-- <a href="https://drive.google.com/file/d/1Bz-e8cFFridXrDcji8XhymebFwd_yoCH/view?usp=sharing" class="btn btn-flat-line btn-default btn-download-resume"><i class="fa fa-download"></i>  Download Resume</a> -->
+              <a href="https://drive.google.com/file/d/1Bz-e8cFFridXrDcji8XhymebFwd_yoCH/view?usp=sharing" class="btn btn-primary btn-flat-solid btn-pill"><i class="fa fa-briefcase"></i> Download Resume</a>
               <!-- <span class="space-inline-15 hidden-xs"></span>
               <a href="#" class="btn btn-flat-line btn-default light-font"><i class="fa fa-print"></i> Print CV</a> -->
             </div>
@@ -534,8 +535,7 @@
       </section><!-- END SERVICES-->
 
       <!--CONTACT-->
-      <section id="contact" class="block-section">
-        <!--CONTACT TITLE-->
+      <!-- <section id="contact" class="block-section">
         <div class=" shape-bottom">
           <div class="bg-secondary block-title">
             <div class="container">
@@ -543,9 +543,8 @@
               <div class="title-icon"> <i class="fa fa-envelope-o"></i> </div>
             </div>
           </div>
-        </div><!--END CONTACT TITLE-->
+        </div>
 
-        <!-- DOWNLOAD & PRVIEW BTN -->
         <div class="parallax-bg bg2" >
           <div class="container">
             <div class="padding30 text-center">
@@ -553,13 +552,14 @@
               <a href="https://www.freelancer.ca/u/VictorChenLi" class="btn btn-lg btn-primary btn-flat-solid btn-pill margin-top-25"><i class="fa fa-briefcase"></i>  Hire Me </a>
               <a href="https://www.linkedin.com/in/victorchenli/" class="btn btn-lg btn-primary btn-flat-solid btn-pill margin-top-25"><i class="fa fa-linkedin"></i>  Connect with me</a>
               <a href="https://github.com/VictorChenLi/" class="btn btn-lg btn-primary btn-flat-solid btn-pill margin-top-25"><i class="fa fa-github"></i> Help on Open Source </a>
-              <!-- <span class="space-inline-15 hidden-xs"></span>
-              <a href="#" class="btn btn-flat-line btn-default light-font"><i class="fa fa-print"></i> Print CV</a> -->
+              <span class="space-inline-15 hidden-xs"></span>
+              <a href="#" class="btn btn-flat-line btn-default light-font"><i class="fa fa-print"></i> Print CV</a>
             </div>
           </div>
-        </div><!-- END DOWNLOAD & PRVIEW BTN -->
+        </div>
 
-      </section><!--END CONTACT-->
+      </section> -->
+      <!--END CONTACT-->
 
 
       <!--FOOTER-->
