--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <li ><a href="#portfolio" class="link-inpage">Portfolio</a></li>
                     <li ><a href="#resume" class="link-inpage">Resume</a></li>
                     <!-- <li ><a href="#blog" class="link-inpage">Blog</a></li> -->
-                    <li ><a href="#contact" id="contact-tab" class="link-inpage">Contact</a></li>
+                    <!-- <li ><a href="#contact" id="contact-tab" class="link-inpage">Contact</a></li> -->
                   </ul>
                 </div>
                 <div class="col-md-3">
