--- a/portfolio-baton.html
+++ b/portfolio-baton.html
@@ -90,7 +90,7 @@
                     <li class="active"><a href="index.html#portfolio" class="link-inpage">Portfolio</a></li>
                     <li ><a href="index.html#resume" class="link-inpage">Resume</a></li>
                     <!-- <li ><a href="#blog" class="link-inpage">Blog</a></li> -->
-                    <li ><a href="index.html#contact" id="contact-tab" class="link-inpage">Contact</a></li>
+                    <!-- <li ><a href="index.html#contact" id="contact-tab" class="link-inpage">Contact</a></li> -->
                   </ul>
                 </div>
                 <div class="col-md-3">
