--- a/index.html
+++ b/index.html
@@ -188,15 +188,15 @@
                 
               </div>
             </div>
-            <div class="bg-dark clearfix">
+            <div id="contact" class="bg-dark clearfix">
               <div class="inner-text contact-me">
-                <h5 class=" color-light text-bold ">Contact Me</h5>
+                <h5 class="color-light text-bold">Contact Me</h5>
                 <p class="no-margin color-light ">
                   <!-- <strong class="fix-width-100"><i class="fa fa-calendar margin-right-5"></i> Birthdate</strong> : 09/11/1990<br/>
                   <strong class="fix-width-100"><i class="fa fa-skype margin-right-5"></i> Skype</strong> : usename.fake<br/><i class="fas fa-calendar-plus"></i>
                   <strong class="fix-width-100"><i class="fa fa-phone margin-right-5"></i> Phone</strong> : + 123-456-789-426<br/> -->
                   <strong class="fix-width-100"><i class="fa fa-envelope margin-right-5"></i> Email</strong>shenli570@gmail.com<br/>
-                  <strong class="fix-width-100"><i class="fa fa-calendar margin-right-5"></i> Meet me</strong><a href="https://doodle.com/settings/calendars">Doodle calendar</a><br/>
+                  <strong class="fix-width-100"><i class="fa fa-calendar margin-right-5"></i> Meet me</strong><a href="https://doodle.com/mm/929778276/victorchenli">Doodle calendar</a><br/>
                   <strong class="fix-width-100"><i class="fa fa-linkedin margin-right-5"></i> Linkedin</strong><a href="https://www.linkedin.com/in/victorchenli/">VictorChenLi</a><br/>
                   <!-- <strong class="fix-width-100"><i class="fa fa-weixin margin-right-5"></i> WeChat</strong>shenli570<br/> -->
                   <!-- <strong class="fix-width-100"><i class="fa fa-globe margin-right-5"></i> Website</strong> : www.someonedomain.me<br/>
