--- a/portfolio-bbtracker.html
+++ b/portfolio-bbtracker.html
@@ -164,20 +164,18 @@
               <div class="col-sm-6">
                 <h3 class="text-uppercase color-dark text-bold">Description</h3>
                 <div class="white-space-10"></div>
-                <p>Curabitur nec nulla lectus, non hendrerit lorem. Quisque lorem risus, porttitor eget fringilla non, vehicula sed tortor. Proin enim quam, vulputate at lobortis quis, condimentum at justo. Phasellus nec nisi justo.</p>
-                <p> porttitor eget fringilla non, vehicula sed tortor. Proin enim quam, vulputate at lobortis quis, condimentum at justo. Phasellus nec nisi justo. Ut luctus sagittis nulla at dapibus. Aliquam ullamcorper commodo elit, quis ornare eros consectetur.</p>
-                <div class="white-space-20"></div>
-                <p><a href="#" class="btn btn-flat-solid primary-btn">Visit Site</a></p>
+                <p>This is a side project I'm working on during my parental level. Between changing diaper and washing the bottles, I'm wonder if there are any app that I can use to track this litter human's bowel movement and eating habit.</p>
+                <p>That's the initial idea that inspired BBTracker, a small app that hope could help new parents to ease the burden of remembering all the feeding schedule and daiper situation.</p>
                 <div class="white-space-20"></div>
               </div>
               <div class="col-sm-6">
                 <div class="white-space-20"></div>
                 <div class="box-testimonial left">
                   <img src="assets/theme/images/people/1.jpg" alt="" class="img-profile">
-                  <h5 class="color-dark text-capitalize no-margin-top line-dash-bottom"> Well Done Jhone! This guy is Really amazing.  </h5>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <h5 class="color-dark text-capitalize no-margin-top line-dash-bottom"> Well Done Victor! This guy is Really a pro Dad.  </h5>
+                  <p>I really like the app.</p>
                   <p><a href="#"><img src="assets/theme/images/patner/1.png" alt="" class="img-logo-client"></a></p>
-                  <p class="font-alt no-margin color-dark">Colie - Css Founder</p>
+                  <p class="font-alt no-margin color-dark">Haley - Victor's Wife</p>
                 </div>
               </div>
 
