--- a/portfolio-dabble.html
+++ b/portfolio-dabble.html
@@ -161,7 +161,7 @@
                 <div class="white-space-10"></div>
                 <p>DABBLE acts as a platform for users to share, annotate, tag and discover new, unique and curated items from a select pool of creators. Then DABBLE brings the user into the creative process by providing background, maker process, feedback, discussion and suggestion, both to the community and the creators. This allows the user to interact and have a say in what they see, what they share and ultimately, what they buy. The relationship between the creator and the user becomes that much more tangible as analysis and data stream through. The end goal is to have the user and creator be able to collaboratively create something that evolves to market demand much quicker and crazier then before.</p>
                 <div class="white-space-20"></div>
-                <p><a href="https://twitter.com/dabbleit?lang=en" class="btn btn-flat-solid primary-btn">Visit Site</a></p>
+                <!-- <p><a href="https://twitter.com/dabbleit?lang=en" class="btn btn-flat-solid primary-btn">Visit Site</a></p> -->
                 <div class="white-space-20"></div>
               </div>
               <div class="col-sm-6">
