--- a/index.html
+++ b/index.html
@@ -243,6 +243,18 @@
                 </div>
               </div> -->
               <div class="col-md-4 col-sm-6">
+                <a href="https://drive.google.com/file/d/1ajoTFhWqE8AbmEjisL3Iurp1pdLZ_-n3/view">
+                  <div class="box-work">
+                    <div class="work-preview">
+                      <img src="assets/theme/images/portfolio/freshbooks_promo.png" alt="">
+                      <div class="hover">
+                        <a href="https://drive.google.com/file/d/1ajoTFhWqE8AbmEjisL3Iurp1pdLZ_-n3/view" class="project-title">FreshBooks App Store</a>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-md-4 col-sm-6">
                 <a href="portfolio-companion.html">
                   <div class="box-work">
                     <div class="work-preview">
