add popimg figma plugin

--- a/index.html
+++ b/index.html
@@ -267,6 +267,18 @@
                 </a>
               </div>
               <div class="col-md-4 col-sm-6">
+                <a href="https://www.figma.com/community/plugin/1004204435648317366/PopImg">
+                  <div class="box-work">
+                    <div class="work-preview">
+                      <img src="assets/theme/images/portfolio/PopImg_promo.png" alt="">
+                      <div class="hover">
+                        <a href="https://www.figma.com/community/plugin/1004204435648317366/PopImg" class="project-title">PopImg Figma Plugin</a>
+                      </div>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <!-- <div class="col-md-4 col-sm-6">
                 <a href="portfolio-dabble.html">
                   <div class="box-work">
                     <div class="work-preview">
@@ -277,7 +289,7 @@
                     </div>
                   </div>
                 </a>
-              </div>
+              </div> -->
               <div class="col-md-4 col-sm-6">
                 <a href="portfolio-baton.html">
                   <div class="box-work">
