make link to open new tab

--- a/index.html
+++ b/index.html
@@ -243,12 +243,12 @@
                 </div>
               </div> -->
               <div class="col-md-4 col-sm-6">
-                <a href="https://drive.google.com/file/d/1ajoTFhWqE8AbmEjisL3Iurp1pdLZ_-n3/view">
+                <a href="https://drive.google.com/file/d/1ajoTFhWqE8AbmEjisL3Iurp1pdLZ_-n3/view" target="_blank">
                   <div class="box-work">
                     <div class="work-preview">
                       <img src="assets/theme/images/portfolio/freshbooks_promo.png" alt="">
                       <div class="hover">
-                        <a href="https://drive.google.com/file/d/1ajoTFhWqE8AbmEjisL3Iurp1pdLZ_-n3/view" class="project-title">FreshBooks App Store</a>
+                        <a href="https://drive.google.com/file/d/1ajoTFhWqE8AbmEjisL3Iurp1pdLZ_-n3/view" class="project-title" target="_blank">FreshBooks App Store</a>
                       </div>
                     </div>
                   </div>
@@ -267,12 +267,12 @@
                 </a>
               </div>
               <div class="col-md-4 col-sm-6">
-                <a href="https://www.figma.com/community/plugin/1004204435648317366/PopImg">
+                <a href="https://www.figma.com/community/plugin/1004204435648317366/PopImg" target="_blank">
                   <div class="box-work">
                     <div class="work-preview">
                       <img src="assets/theme/images/portfolio/PopImg_promo.png" alt="">
                       <div class="hover">
-                        <a href="https://www.figma.com/community/plugin/1004204435648317366/PopImg" class="project-title">PopImg Figma Plugin</a>
+                        <a href="https://www.figma.com/community/plugin/1004204435648317366/PopImg" class="project-title" target="_blank" >PopImg Figma Plugin</a>
                       </div>
                     </div>
                   </div>
